OO-725 fix overlapping peekview previews

--- a/src/main/webapp/static/themes/light/modules/_video.scss
+++ b/src/main/webapp/static/themes/light/modules/_video.scss
@@ -41,6 +41,10 @@
 	}
 }
 
+.o_video_peekview {
+	text-align: center;
+}
+
 .o_video_listing {
 	margin-right: -10px;
 	
